--- a/index.html
+++ b/index.html
@@ -1205,11 +1205,11 @@
       </div>
       <select class="cat-select" id="catFilter" onchange="filterProducts()">
         <option value="">Todas las categorías</option>
-        <option value="Laparoscopía">Laparoscopía</option>
-        <option value="Histeroscopía">Histeroscopía</option>
-        <option value="Torre Laparoscópica">Torre Laparoscópica</option>
-        <option value="Accesorios">Accesorios</option>
-        <option value="Endoscopía">Endoscopía</option>
+        <option value="Instrumental">Instrumental</option>
+        <option value="Consumibles">Consumibles</option>
+        <option value="Grapado">Grapado</option>
+        <option value="Ópticas">Ópticas</option>
+        <option value="Contenedores">Contenedores</option>
       </select>
     </div>
 
