--- a/index.html
+++ b/index.html
@@ -703,9 +703,9 @@
           <div class="contact-item-icon wa">💬</div>
           <div><div class="contact-item-label">WhatsApp</div><div class="contact-item-value">+52 33 2796 3109</div></div>
         </a>
-        <a href="/cdn-cgi/l/email-protection#88feede6fce9fbc8f8faedebe1fbe1e7e6e4e9f8a6e5f0" class="contact-item">
+        <a href="/cdn-cgi/l/email-protection#e7918289938694a7979582848e948e88898b8697c98a9f" class="contact-item">
           <div class="contact-item-icon mail">✉️</div>
-          <div><div class="contact-item-label">Correo Electrónico</div><div class="contact-item-value"><span class="__cf_email__" data-cfemail="c6b0a3a8b2a7b586b6b4a3a5afb5afa9a8aaa7b6e8abbe">[email&#160;protected]</span></div></div>
+          <div><div class="contact-item-label">Correo Electrónico</div><div class="contact-item-value"><span class="__cf_email__" data-cfemail="d6a0b3b8a2b7a596a6a4b3b5bfa5bfb9b8bab7a6f8bbae">[email&#160;protected]</span></div></div>
         </a>
       </div>
       <div class="contact-form-card">
@@ -888,7 +888,7 @@ const products = [
 ];
 
 // ── CONFIGURACIÓN APPS SCRIPT WEB APP ──
-const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxGAkFTH8cQi6Syzk2tFRYFrfujilbWos0lf1ap0_NOmobDNpT16Pdgj7Y8OON_6d94Wg/exec';
+const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwwzo4mGUzJ_LcqQ5udenphPaM76w0VDdthD6lR3An2aQvp11lFcx_hXmAcTbcX5XY82w/exec';
 
 let cart = {};
 let quantities = {};
@@ -1019,7 +1019,7 @@ document.getElementById('quoteModal').addEventListener('click', function(e) {
   if (e.target === this) closeQuoteModal();
 });
 
-async function enviarCotizacion() {
+function enviarCotizacion() {
   const nombre = document.getElementById('q-nombre').value.trim();
   const email = document.getElementById('q-email').value.trim();
   const institucion = document.getElementById('q-institucion').value.trim();
@@ -1029,56 +1029,50 @@ async function enviarCotizacion() {
   if (!nombre || !email) { alert('Por favor completa nombre y correo electrónico.'); return; }
 
   const items = Object.values(cart);
-  const refNum = '#PL-' + Date.now().toString().slice(-6);
+  const refNum = 'PL-' + Date.now().toString().slice(-6);
+  const refDisplay = '#' + refNum;
   const fechaHora = new Date().toLocaleString('es-MX');
   const productosStr = items.map(i => `• ${i.name} (x${i.qty})`).join('\n');
 
-  // Mostrar indicador de carga
-  const btnSubmit = document.querySelector('.modal-submit');
-  const btnOriginalText = btnSubmit.textContent;
-  btnSubmit.textContent = '⏳ Enviando...';
-  btnSubmit.disabled = true;
+  // 1️⃣ Abrir WhatsApp PRIMERO (antes de cualquier async) para evitar bloqueo del navegador
+  const waText = encodeURIComponent(
+    `📋 *NUEVA SOLICITUD DE COTIZACIÓN*\n_Precisión Lap — ${fechaHora}_\n\n` +
+    `*Referencia:* ${refDisplay}\n*Cliente:* ${nombre}\n*Institución:* ${institucion || 'No indicada'}\n` +
+    `*Email:* ${email}\n*WhatsApp cliente:* ${whatsapp || 'No indicado'}\n\n` +
+    `*🛒 Productos solicitados:*\n${productosStr}\n\n*Notas:* ${notas || 'Ninguna'}`
+  );
+  window.open(`https://wa.me/523327963109?text=${waText}`, '_blank');
 
+  // 2️⃣ Cerrar modal y mostrar pantalla de éxito con referencia correcta
+  closeQuoteModal();
+  document.getElementById('successRefNum').textContent = refDisplay;
+  document.getElementById('successOverlay').classList.add('open');
+  const cartBackup = Object.assign({}, cart);
+  cart = {};
+  updateCartCount();
+
+  // 3️⃣ Enviar al Apps Script en segundo plano (sin bloquear UI)
   const payload = {
+    referencia: refNum,
     nombre: nombre,
     institucion: institucion || 'No indicada',
     email: email,
     whatsapp: whatsapp || 'No indicado',
     productos: productosStr,
     notas: notas || 'Ninguna',
-    referencia: refNum,
     fechaHora: fechaHora
   };
 
-  try {
-    const response = await fetch(APPS_SCRIPT_URL, {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(payload)
-    });
-    console.log('✅ Enviado a Apps Script (Sheets + correo)');
-  } catch (error) {
-    console.error('Error al enviar:', error);
-    // Continuamos igual — con no-cors no podemos leer la respuesta pero el envío funciona
-  } finally {
-    btnSubmit.textContent = btnOriginalText;
-    btnSubmit.disabled = false;
-  }
-
-  const waText = encodeURIComponent(
-    `📋 *NUEVA SOLICITUD DE COTIZACIÓN*\n_Precisión Lap — ${fechaHora}_\n\n` +
-    `*Referencia:* ${refNum}\n*Cliente:* ${nombre}\n*Institución:* ${institucion || 'No indicada'}\n` +
-    `*Email:* ${email}\n*WhatsApp cliente:* ${whatsapp || 'No indicado'}\n\n` +
-    `*🛒 Productos solicitados:*\n${productosStr}\n\n*Notas:* ${notas || 'Ninguna'}`
-  );
-  window.open(`https://wa.me/523327963109?text=${waText}`, '_blank');
-
-  closeQuoteModal();
-  document.getElementById('successRefNum').textContent = refNum;
-  document.getElementById('successOverlay').classList.add('open');
-  cart = {};
-  updateCartCount();
+  fetch(APPS_SCRIPT_URL, {
+    method: 'POST',
+    mode: 'no-cors',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify(payload)
+  }).then(() => {
+    console.log('✅ Registrado en Sheets y correo enviado');
+  }).catch(err => {
+    console.error('Error al enviar a Apps Script:', err);
+  });
 }
 
 function closeSuccess() { document.getElementById('successOverlay').classList.remove('open'); showTab('catalogo'); }
